# class-recognition-ad-cource

./: 23vr008n.ipynb  README.md  TransferCNN.ipynb  pyproject.toml
src/class_recognition_ad_cource/: __init__.py
