[project]
name = "class-recognition-ad-cource"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "SO高林秀", email = "s.takabayashi@super-one.co.jp" }
]
dependencies = [
    "matplotlib>=3.9.1",
    "pandas>=2.2.2",
    "numpy>=2.0.0",
    "torch>=2.3.1",
    "torchvision>=0.18.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
type = "index"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/class_recognition_ad_cource"]
